Fix footer height on mobile

--- a/source/_assets/stylesheets/components/footer.less
+++ b/source/_assets/stylesheets/components/footer.less
@@ -1,6 +1,9 @@
 #footer-iframe {
   width: 100%;
-  height: 237px;
+  height: 559px;
   border: 0;
   margin-bottom: -8px;
+  .media-up(@screen-tablet, {
+    height: 237px;
+  });
 }
